2001-10-08  Zack Weinberg  <zack@codesourcery.com>

	* aclocal.m4 (gcc_AC_PROG_GNAT): New.
	* configure.in: Use it.              
	* configure: Regenerated.
	* config/pa/t-linux, config/pa/t-pa, config/pa/t-pa64,
	config/pa/t-pro: Set T_ADAFLAGS, not ADA_CFLAGS.      

2001-10-08  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppfiles.c (open_file): Don't mark zero-length files
	never-reread here.  Don't output diagnostics here either.
	(stack_include_file): Mark them never-reread here.
	(_cpp_read_file): Update.

2001-10-08  Richard Henderson  <rth@redhat.com>

	* config/i386/sol2.h (UNALIGNED_DOUBLE_INT_ASM_OP): New.

2001-10-08  Richard Henderson  <rth@redhat.com>

	* expr.c (store_expr): When converting a CONST_INT for storage
	in a SUBREG, convert it to both SUBREG modes before stripping
	the SUBREG.

2001-10-08  Richard Henderson  <rth@redhat.com>

	* varasm.c (restore_varasm_status): New.
	* function.h: Declare it.
	* function.c (pop_function_context_from): Call it.

2001-10-08  Richard Henderson  <rth@redhat.com>

	* c-common.h (struct c_lang_decl): Add declared_inline.
	* c-tree.h (DECL_DECLARED_INLINE_P): New.
	* c-lang.c (c_disregard_inline_limits): Use it.
	* c-decl.c (duplicate_decls): Likewise.
	(pushdecl, redeclaration_error_message): Likewise.
	(pushdecl): Allocate DECL_LANG_SPECIFIC if needed.
	(grokdeclarator): Likewise.  Set DECL_DECLARED_INLINE_P.
	Set DECL_INLINE if -finline-functions.
	(store_parm_decls): Don't allocate DECL_LANG_SPECIFIC here.

2001-10-08  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppmacro.c (funlike_invocation_p): Move some logic to caller
	in enter_macro_context.  Create a padding token in its own context
	if necessary when the search for '(' fails.
	(enter_macro_context): Update.

2001-10-07  Joseph S. Myers  <jsm28@cam.ac.uk>

	* ChangeLog.2, c-decl.c, config/i386/i386.md, doc/gcc.texi, gcc.c,
	genmultilib, toplev.c: Fix spelling errors of "separate" as
	"seperate", and corresponding spelling errors of related words.
